[chore] adding flutter_reactive_ble dependency

--- a/apolline-flutter/pubspec.yaml
+++ b/apolline-flutter/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   duration_picker: ^1.0.1
   flutter_speed_dial: ^4.3.0
   syncfusion_flutter_charts: ^19.2.62
+  flutter_reactive_ble: ^4.0.1
 
 
 
