[chore] adding missing NSBluetoothPeripheralUsageDescription key to Info.plist config

--- a/apolline-flutter/ios/Runner/Info-Debug.plist
+++ b/apolline-flutter/ios/Runner/Info-Debug.plist
@@ -43,6 +43,8 @@
 	<string>Older devices need location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Need location when in use</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Apolline needs Bluetooth access to connect to air quality sensors.</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>bluetooth-central</string>
