--- a/apolline-flutter/ios/Runner/Info-Debug.plist
+++ b/apolline-flutter/ios/Runner/Info-Debug.plist
@@ -42,7 +42,7 @@
 	<key>NSLocationUsageDescription</key>
 	<string>Older devices need location.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Need location when in use</string>
+	<string>When your sensor does not have an accurate GPS position, Apolline uses your iPhone's location; it is used to tag air quality information.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Apolline needs Bluetooth access to connect to air quality sensors.</string>
 	<key>UIBackgroundModes</key>
